--- a/styles/sassfile.scss
+++ b/styles/sassfile.scss
@@ -1,11 +1,24 @@
 $neutralgray: rgba(20, 20, 20, 0.2);
 $headFont: 'Fjalla One', sans-serif;
+$sarif: 'Merriweather', serif;
+$salmon: rgb(222, 69, 69);
+$fun: 'Nunito', sans-serif;
 
+
+
+.foggyclarity{
+  background-color: rgba(111, 119, 118, 0.5);
+}
 
 #firstPage{
   // background-color: $neutralgray;
-  background-image: url("../images/cello.jpg");
+  background: url("../images/cello.jpg");
   background-size: cover;
+  // -webkit-filter: blur(5px);
+  // -moz-filter: blur(5px);
+  // -o-filter: blur(5px);
+  // -ms-filter: blur(5px);
+  // filter: blur(5px);
 }
 #firstcontainer{
   background-color: $neutralgray;
@@ -15,15 +28,12 @@ $headFont: 'Fjalla One', sans-serif;
   // background-color: rgba(149, 38, 48, .2);
   background-image: url("../images/bike.jpg");
   background-size: cover;
-
 }
 
 #thirdPage{
   // background-color: rgba(226, 111, 49, .2);
   background-image: url("../images/water.jpg");
   background-size: cover;
-
-
 }
 
 #fourthPage{
@@ -44,9 +54,10 @@ $headFont: 'Fjalla One', sans-serif;
 
 #name {
   text-align: center;
-  color: rgb(255, 255, 255);
+  color: white;
   font-family: $headFont;
   font-size: 70px;
+  text-shadow: rgba(0, 0, 0, 0.91) 0 0 4px;
 }
 
 #nav{
@@ -54,24 +65,83 @@ $headFont: 'Fjalla One', sans-serif;
   text-align: center;
   margin: 0 auto;
   bottom: -10%;
-  font-family: Helvetica;
-  font-size: 20px;
+  font-family: $sarif;
+  font-size: 16px;
   color: white;
   text-decoration: none;
 
 }
 
 .navlink{
-  font-family: Helvetica;
-  font-size: 30px;
-  color: white;
+  font-family: $sarif;
+  font-size: 36px;
+  color: $salmon;
   text-decoration: none;
 }
 
 .navlink:hover{
-  font-family: Helvetica;
-  font-size: 30px;
-  color: red;
-  text-decoration: none;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
+  font-family: $sarif;
+  font-size: 36px;
+  color: darken($salmon, 20%);
+  // text-decoration: underline;
+}
 
+#about{
+  background-color: rgba(51, 50, 51, 0.75);
+}
+
+#profile{
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.head{
+  text-align: center;
+  // font-family: $fun
+  font-family: $headFont;
+  font-size: 48px;
+  font-weight: bold;
+  color: $salmon;
+}
+
+.profiletext{
+  color: white;
+  font-family: $fun;
+  font-size: 24px;
+}
+
+.red{
+  color: $salmon;
+  font-family: $fun;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+#mug {
+  display:block;
+  margin: auto;
+  border: 2px solid white;
+  border-radius: 50%;
+  overflow: hidden;
+  height: 150px;
+  width: 150px;
+}
+
+
+#project1{
+  text-align: center;
+  font-family: 'Libre Baskerville', serif;  color: white;
+  font-size: 48px;
+}
+
+.projectimg{
+  height: 100%;
+  width: 100%;
 }
