working on showcase

--- a/styles/sassfile.css
+++ b/styles/sassfile.css
@@ -78,7 +78,7 @@
 .profiletext {
   color: white;
   font-family: "Nunito", sans-serif;
-  font-size: 24px; }
+  font-size: 18px; }
 
 .red {
   color: #de4545;
@@ -98,11 +98,47 @@
 #project1 {
   text-align: center;
   font-family: 'Libre Baskerville', serif;
-  color: white;
   font-size: 48px; }
+
+#project2 {
+  text-align: center;
+  font-family: 'Philosopher', sans-serif;
+  font-size: 48px; }
+
+#project3 {
+  text-align: center;
+  font-family: 'Rock Salt', cursive;
+  font-size: 48px; }
+
+#project4 {
+  text-align: center;
+  font-family: 'Grand Hotel', cursive;
+  font-size: 60px; }
 
 .projectimg {
   height: 100%;
   width: 100%; }
+
+#project1big {
+  background: url("../images/project1big.png");
+  background-size: cover; }
+
+#project2big {
+  background: url("../images/project2big.png");
+  background-size: cover; }
+
+#project3big {
+  background: url("../images/project3big.png");
+  background-size: cover; }
+
+#project4big {
+  background: url("../images/project4big.png");
+  background-size: cover; }
+
+.bigdesc {
+  text-align: center;
+  background-color: rgba(40, 40, 40, 0.72);
+  color: white;
+  font-family: "Nunito", sans-serif; }
 
 /*# sourceMappingURL=sassfile.css.map */
