--- a/styles/sassfile.css
+++ b/styles/sassfile.css
@@ -9,7 +9,7 @@
   background-color: rgba(20, 20, 20, 0.2); }
 
 #secondPage {
-  background-image: url("../images/bike.jpg");
+  background-image: url("../images/campy.jpg");
   background-size: cover; }
 
 #thirdPage {
@@ -30,13 +30,15 @@
   text-align: center;
   color: white;
   font-family: "Fjalla One", sans-serif;
-  font-size: 70px;
+  font-size: 80px;
   text-shadow: rgba(0, 0, 0, 0.91) 0 0 4px; }
 
 #nav {
   position: relative;
   text-align: center;
-  margin: 0 auto;
+  top: 4em;
+  margin-left: auto;
+  margin-right: auto;
   bottom: -10%;
   font-family: "Merriweather", serif;
   font-size: 16px;
@@ -60,7 +62,7 @@
   color: #a11c1c; }
 
 #about {
-  background-color: rgba(51, 50, 51, 0.75); }
+  background-color: rgba(51, 50, 51, 0.65); }
 
 #profile {
   text-align: center;
@@ -70,6 +72,7 @@
 
 .head {
   text-align: center;
+  margin-top: 2%;
   font-family: "Fjalla One", sans-serif;
   font-size: 48px;
   font-weight: bold;
@@ -81,6 +84,12 @@
   font-size: 18px; }
 
 .red {
+  color: #de4545;
+  font-family: "Nunito", sans-serif;
+  font-size: 24px;
+  font-weight: bold; }
+
+#mugtext {
   color: #de4545;
   font-family: "Nunito", sans-serif;
   font-size: 24px;
@@ -98,12 +107,12 @@
 #project1 {
   text-align: center;
   font-family: 'Libre Baskerville', serif;
-  font-size: 48px; }
+  font-size: 52px; }
 
 #project2 {
   text-align: center;
   font-family: 'Philosopher', sans-serif;
-  font-size: 48px; }
+  font-size: 52px; }
 
 #project3 {
   text-align: center;
@@ -113,11 +122,35 @@
 #project4 {
   text-align: center;
   font-family: 'Grand Hotel', cursive;
-  font-size: 60px; }
+  font-size: 72px; }
 
 .projectimg {
   height: 100%;
   width: 100%; }
+
+.projectimg:hover {
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -o-filter: blur(1px);
+  -ms-filter: blur(1px);
+  filter: blur(1px); }
+
+.projectlinks {
+  color: #de4545;
+  text-decoration: none;
+  background-color: #303030;
+  padding: 4px; }
+
+.projectlinks:hover {
+  color: #de4545;
+  text-decoration: none;
+  background-color: white;
+  padding: 4px;
+  -o-transition: .5s;
+  -ms-transition: .5s;
+  -moz-transition: .5s;
+  -webkit-transition: .5s;
+  transition: .5s; }
 
 #project1big {
   background: url("../images/project1big.png");
@@ -137,7 +170,7 @@
 
 .bigdesc {
   text-align: center;
-  background-color: rgba(40, 40, 40, 0.72);
+  background-color: rgba(40, 40, 40, 0.9);
   color: white;
   font-family: "Nunito", sans-serif; }
 
